[tool.poetry]
name = "topaz_test"
version = "0.1.0"
description = "Topaz teste"
authors = ["Douglas Panhota <douglaspands@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
flake8 = "^3.9.2"
black = {version = "^21.5b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
